# Kompute-OpenCV

examples/: ..gitignore.swp  .gitignore
examples/image_test/: CMakeLists.txt  README.md
examples/image_test/shader/: my_shader.comp
examples/opencv_image_add/: CMakeLists.txt
examples/opencv_image_add/src/: main.cpp
examples/opencv_image_filter/: CMakeLists.txt  README.md
examples/opencv_image_filter/shader/: my_shader.comp
examples/opencv_image_filter/src/: main.cpp
